@@ -1,4 +1,4 @@
-SUBDIRS = drag_to_canvas simple moving_shapes demo coordinates text table
+SUBDIRS = drag_to_canvas simple moving_shapes demo coordinates text table tablemodel
 
 #EXTRA_DIST	=  Makefile.am_fragment README.txt
 
